# simple-ai-writer

./: .pnpmfile.cjs  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.claude/skills/bump-version/: SKILL.md
.github/workflows/: ci.yml  release.yml
design/: IMPLEMENTATION_PLAN.md  PRD.md  SEPC_OVERVIEW.md
docs/: architecture.md  ci.md  design-system.md  lore-facet-plan.md  lore-granularity-research.md  workflows.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  protocol.rs  scope.rs  secrets.rs
src/components/ai/: AiDrawer.module.css  AiDrawer.tsx  AiPanel.module.css  AiPanel.tsx  ConsistencyCheck.module.css  ConsistencyCheck.tsx  InlineAiBubble.module.css  InlineAiBubble.tsx
src/components/command/: CommandPalette.module.css  CommandPalette.tsx
src/components/common/: ContextMenu.module.css  ContextMenu.tsx  MarkdownTextarea.tsx  ModalShell.tsx
src/components/editor/: CodeEditor.module.css  CodeEditor.tsx  EditorContextMenu.tsx  (+8 more)
src/i18n/: index.ts
src/lib/: agentLoop.ts  aiClient.ts  aiConfig.ts  apiLog.ts  export.ts  fileio.ts  http.ts  keyStore.ts  lore.ts  loreGenerator.ts  markdown.ts  memory.ts  motion.ts  outline.ts  paths.ts  platform.ts  project.ts  rag.ts  tokenEstimate.ts  tools.ts
src/stores/: aiStore.ts  aiTaskStore.ts  appStore.ts  editorStore.ts  loreStore.ts  memoryStore.ts  projectStore.ts
src/styles/: global.css  tokens.css
(+98 files in other folders)
